--- a/front/package.json
+++ b/front/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/react": "^18.0.37",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dnd": "^14.0.5",
@@ -15,6 +16,7 @@
     "react-rnd": "^10.3.7",
     "react-scripts": "4.0.3",
     "react-typing-animation": "^1.6.2",
+    "typescript": "^5.0.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -42,5 +44,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "2.8.7"
   }
 }
