--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,8 @@
     "react-rnd": "^10.3.7",
     "react-scripts": "4.0.3",
     "react-typing-animation": "^1.6.2",
+    "recoil": "^0.7.7",
+    "recoil-nexus": "^0.4.0",
     "typescript": "^5.0.4",
     "web-vitals": "^1.1.2"
   },
