--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "react-dnd": "^14.0.5",
     "react-dnd-html5-backend": "^14.1.0",
     "react-dom": "^17.0.2",
+    "react-ga": "^3.3.1",
     "react-rnd": "^10.3.7",
     "react-scripts": "4.0.3",
     "recoil": "^0.7.7",
